# autogen-cnp-shim

./: LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
autogen_cnp_shim/: __init__.py  bidder_proxy.py  budget_tracker.py  cnp_group_chat.py
examples/: basic_research_team.py
tests/: test_bidder_proxy.py  test_budget_tracker.py  test_cnp_group_chat.py  test_integration.py
