[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autogen-cnp-shim"
version = "0.1.0"
description = "AutoGen 0.4+ adapter for contract-net-router"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "M00C1FER" }]
dependencies = [
  "autogen-agentchat>=0.4",
  "contract-net-router @ git+https://github.com/M00C1FER/contract-net-router.git@042f9c23c2d9c0c1bf8d2e9d814b92c58909be66",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
